<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/norton_pizza"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/txtphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter PhoneNumber"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:text="@string/toppings"
        android:textStyle="italic"/>

    <CheckBox
        android:id="@+id/checkpepperoni"
        android:layout_width="150dp"
        android:layout_marginLeft="15sp"
        android:layout_height="wrap_content"
        android:text="@string/pepperoni"/>

    <CheckBox
        android:id="@+id/checkmushroom"
        android:layout_width="150dp"
        android:layout_marginLeft="15sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/mushroom"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_height="wrap_content"
        android:text="@string/delivery_method"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp">

        <RadioButton
            android:id="@+id/radioeatin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eat_in" />

        <RadioButton
            android:id="@+id/radiotakeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/take_out" />
    </RadioGroup>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:text="@string/please_rate_out_services"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginBottom="7dp"
        android:onClick="onpressed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
        android:id="@+id/btnorder"
        android:layout_width="110sp"
        android:layout_height="40sp"
        android:layout_marginLeft="15sp"
            android:textAlignment="center"
        android:text="@string/place_the_order"/>

        <Button
            android:id="@+id/btnresult"
            android:layout_width="125sp"
            android:layout_height="40sp"
            android:layout_marginLeft="10sp"
            android:textAlignment="center"
            android:text="@string/show_result"/>

    </LinearLayout>
        <TextView
        android:id="@+id/txtresult"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:onClick="onpressed"
        android:text="@string/result"/>
    </LinearLayout>

</LinearLayout>
