<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/login_page"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

        <EditText
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:id="@+id/txtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:inputType="text" />

        <EditText
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:hint="Password"
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    <LinearLayout
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/forgotpassword"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/txtregister"
            android:text="@string/register"
            android:textSize="15sp"

            />
    </LinearLayout>
    <Button
        android:id="@+id/loginbtn"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/txtinfo"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="50sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="50sp"
        android:layout_marginRight="50sp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"/>
</LinearLayout>